[package]
name = "pci-access"
version = "0.1.0"
authors = ["Kazurin Nanako <71819243+Kazurin-775@users.noreply.github.com>"]
edition = "2021"

[dependencies]
cfg-if = "1"
modular-bitfield = "0.11"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { version = "0.14", default-features = false, features = [
    "instructions",
] }
